--- a/GroupConnect/res/layout/activity_main.xml
+++ b/GroupConnect/res/layout/activity_main.xml
@@ -1,77 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relLayMainCont"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <fragment
-        android:id="@+id/map"
+    <!-- The main content view -->
+
+    <FrameLayout
+        android:id="@+id/frame_container"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <!-- The navigation drawer list -->
+
+    <ListView
+        android:id="@+id/slider_list"
+        android:layout_width="240dp"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment" />
+        android:layout_gravity="start"
+        android:background="#ffffff"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp" />
 
-    <RelativeLayout
-        android:id="@+id/relLaySearchMenu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
-
-        <LinearLayout
-            android:id="@+id/linLayControls"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:gravity="right"
-            android:orientation="horizontal" >
-
-            <ImageButton
-                android:id="@+id/imgBnSearch"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:contentDescription="@string/contDesc_Search"
-                android:cropToPadding="true"
-                android:scaleType="fitXY"
-                android:src="@drawable/ic_menu_search" />
-        </LinearLayout>
-
-        <RelativeLayout
-            android:id="@+id/relLayFilterHolder"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/linLayControls"
-            android:background="@drawable/layout_bg"
-            android:padding="20dp"
-            android:visibility="gone" >
-
-            <TextView
-                android:id="@+id/tvCategoryLb"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/searchMenu_category" />
-
-            <Spinner
-                android:id="@+id/spCategory"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvCategoryLb"
-                android:layout_marginLeft="20dp" />
-
-            <TextView
-                android:id="@+id/tvGrpFilterLb"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/spCategory"
-                android:text="@string/searchMenu_grpfilter" />
-
-            <Spinner
-                android:id="@+id/spGrpFilter"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tvGrpFilterLb"
-                android:layout_marginLeft="20dp" />
-        </RelativeLayout>
-    </RelativeLayout>
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
