--- a/GroupConnect/res/menu/main.xml
+++ b/GroupConnect/res/menu/main.xml
@@ -1,9 +1,21 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.slidingdrawer.MainActivity" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/groups"
+        android:icon="@drawable/ic_launcher"
+        android:orderInCategory="2"
+        android:showAsAction="always"/>
+    <item
+        android:id="@+id/map"
+        android:icon="@drawable/map"
+        android:orderInCategory="1"
+        android:showAsAction="always"/>
+    <item
+        android:id="@+id/edu"
+        android:icon="@drawable/star"
+        android:orderInCategory="3"
+        android:showAsAction="always"/>
 
 </menu>
