--- a/GroupConnect/res/layout/activity_create_rm.xml
+++ b/GroupConnect/res/layout/activity_create_rm.xml
@@ -1,17 +1,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_margin="5dp" >
+    
+    
+   <!-- <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Icon" />
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:orientation="horizontal"
+        android:layout_margin="3dp">
+           
+	        <ImageView
+	            android:id="@+id/imgView"
+	            android:layout_width="80dp"
+	            android:layout_height="80dp"
+	            android:background="@drawable/border_for_imageview" >
+			</ImageView>
+
+    	
+    	<Button
+        android:id="@+id/btnLoadIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:text="Upload Picture"
+        android:layout_gravity="center"></Button>
+        
+    </LinearLayout>-->
+    
     
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="2dp"
         android:text="Title of the Room" />
     
     <EditText
             android:id="@+id/etTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Title">
             <requestFocus />
@@ -21,54 +55,64 @@
         android:id="@+id/tvCategory"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="2dp"
         android:text="Category of the subject" />
-    
-    <EditText
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:orientation="horizontal">
+            
+        <EditText
             android:id="@+id/etCategory"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:hint="Enter Category"
-    />
-     
-     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Max no. of Learner" />
-
-     <EditText
-         android:id="@+id/etNoOfLearner"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:ems="10"
-         android:inputType="number"  >
-
-         
-     </EditText>
-     
-     <TextView
-        android:id="@+id/tvLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Location" />
+    	/>
+        
+        
+    </LinearLayout>
     
-    <EditText
-            android:id="@+id/etLocation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Enter Location"
-   	/>
-     
+    <TextView
+        android:id="@+id/tvDesc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="2dp"
+        android:text="Description" />
 
-     <RelativeLayout
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" 
+        android:orientation="horizontal">
+            
+        <EditText
+            android:id="@+id/etDesc"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            
+            android:hint="Enter Description"
+    	/>
+        
+        
+    </LinearLayout>
+    
+    
+
+  <!--     <RelativeLayout
          android:layout_width="fill_parent"
-         android:layout_height="wrap_content" >
+         android:layout_height="wrap_content" 
+         >
         
          <Button
-            android:id="@+id/btnSubmit"
+            android:id="@+id/btnNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
-            android:text="Submit" />
+            android:text="Next >" />
          
          <Button
             android:id="@+id/btnClear"
@@ -86,7 +130,29 @@
             android:layout_below="@+id/btnSubmit"
             android:text="Cancel" />
          
-     </RelativeLayout>
+     </RelativeLayout>-->
+     
+     <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="bottom"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/btnCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Cancel" />
+
+        <Button
+            android:id="@+id/btnNext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Next >" />
+    </LinearLayout>
+
 
 </LinearLayout>
 
