--- a/GroupConnect/res/layout/fragment_home.xml
+++ b/GroupConnect/res/layout/fragment_home.xml
@@ -70,12 +70,12 @@
             android:layout_weight="0.8"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <ImageButton
+        <!-- <ImageButton
             android:id="@+id/fgh_bnSetDist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.1"
-            android:background="@drawable/setting" />
+            android:background="@drawable/setting" /> -->
     </LinearLayout>
 
     <ListView
