--- a/GroupConnect/res/layout/voting_chart.xml
+++ b/GroupConnect/res/layout/voting_chart.xml
@@ -5,19 +5,18 @@
     android:background="@android:color/black"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/headerlayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
-        android:gravity="right"
-        android:orientation="horizontal" >
+        android:layout_marginTop="15dp" >
 
         <TextView
             android:id="@+id/Chart_Tittle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:textColor="#FFFFFF"
             android:textSize="15dp" />
 
@@ -27,10 +26,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="5dp"
+            android:layout_alignParentRight="true"
             android:onClick="FinalLocation"
-            android:text="Finalize"
-            android:visibility="invisible" />
-    </LinearLayout>
+            android:text="Finalize" />
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/Chart_layout"
