--- a/GroupConnect/res/layout/main.xml
+++ b/GroupConnect/res/layout/main.xml
@@ -48,7 +48,7 @@
                         android:gravity="center"
                         android:text="View Statistic"
                         android:textColor="#FFFFFF"
-                        android:textSize="25dp" />
+                        android:textSize="30dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -56,7 +56,7 @@
                         android:layout_marginTop="15dp"
                         android:text="Education Level: "
                         android:textColor="#FFFFFF"
-                        android:textSize="20dp" />
+                        android:textSize="25dp" />
 
                     <CheckBox
                         android:id="@+id/chkPrimary"
@@ -65,7 +65,7 @@
                         android:checked="true"
                         android:text="Primary"
                         android:textColor="#FFFFFF"
-                        android:textSize="15dp" />
+                        android:textSize="20dp" />
 
                     <CheckBox
                         android:id="@+id/chkSecondary"
@@ -73,7 +73,7 @@
                         android:layout_height="wrap_content"
                         android:text="Secondary"
                         android:textColor="#FFFFFF"
-                        android:textSize="15dp" />
+                        android:textSize="20dp" />
 
                     <CheckBox
                         android:id="@+id/chkPolytechnic"
@@ -81,7 +81,7 @@
                         android:layout_height="wrap_content"
                         android:text="Polytechnic"
                         android:textColor="#FFFFFF"
-                        android:textSize="15dp" />
+                        android:textSize="20dp" />
 
                     <TextView
                         android:layout_width="match_parent"
@@ -89,14 +89,14 @@
                         android:layout_marginTop="15dp"
                         android:text="Category: "
                         android:textColor="#FFFFFF"
-                        android:textSize="20dp" />
+                        android:textSize="25dp" />
 
                     <RadioGroup
                         android:id="@+id/radioCategory"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textColor="#FFFFFF"
-                        android:textSize="15dp" >
+                        android:textSize="20dp" >
                     </RadioGroup>
 
                     <RelativeLayout
@@ -110,8 +110,14 @@
                             android:layout_alignParentRight="true"
                             android:layout_marginRight="5dp"
                             android:layout_marginTop="15dp"
+                            android:background="@drawable/button_okay_white"
+                            android:drawableLeft="@drawable/search2"
+                            android:drawablePadding="10dp"
                             android:onClick="Search"
-                            android:text="Search" />
+                            android:paddingLeft="10dp"
+                            android:paddingRight="15dp"
+                            android:text="Search"
+                            android:textColor="#FFFFFF" />
                     </RelativeLayout>
                 </LinearLayout>
             </ScrollView>
