--- a/GroupConnect/res/menu/login.xml
+++ b/GroupConnect/res/menu/login.xml
@@ -3,24 +3,19 @@
     tools:context="sg.nyp.groupconnect.Login" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-    <item
         android:id="@+id/action_magiclogin_tc"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="Login as TC"/>
-    <item
-        android:id="@+id/action_magiclogin_tom"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="Login as Tom"/>
+        android:title="Login as Learner"/>
     <item
         android:id="@+id/action_magiclogin_alfred"
         android:orderInCategory="100"
         android:showAsAction="never"
-        android:title="Login as Alfred"/>
+        android:title="Login as Educator"/>
+    <item
+        android:id="@+id/action_magiclogin_nyp"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Login as Organization"/>
 
 </menu>
