--- a/GroupConnect/res/layout/list_item_room.xml
+++ b/GroupConnect/res/layout/list_item_room.xml
@@ -9,12 +9,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-        <!-- <ImageView -->
-        <!-- android:id="@+id/icon" -->
-        <!-- android:layout_width="wrap_content" -->
-        <!-- android:layout_height="40dp" -->
-        <!-- android:focusable="false" -->
-        <!-- android:focusableInTouchMode="false" /> -->
+        <ImageView
+	        android:id="@+id/lmIcon"
+	        android:layout_width="wrap_content"
+	        android:layout_height="40dp"
+	        android:focusable="false"
+	        android:focusableInTouchMode="false" />
 
         <TextView
             android:id="@+id/lmTitle"
