--- a/GroupConnect/res/menu/room_map.xml
+++ b/GroupConnect/res/menu/room_map.xml
@@ -1,11 +1,7 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.slidingdrawer.MainActivity">
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-    
     <item
         android:id="@+id/refresh"
         android:orderInCategory="100"
@@ -22,7 +18,7 @@
         android:id="@+id/add"
         android:orderInCategory="100"
         android:showAsAction="always"
-        android:icon="@drawable/add"/>
+        android:icon="@drawable/add3"/>
     
 
 </menu>
