--- a/GroupConnect/res/menu/main.xml
+++ b/GroupConnect/res/menu/main.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/groups"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/group"
         android:orderInCategory="2"
         android:showAsAction="always"/>
     <item
@@ -14,7 +14,7 @@
         android:showAsAction="always"/>
     <item
         android:id="@+id/edu"
-        android:icon="@drawable/star"
+        android:icon="@drawable/edu"
         android:orderInCategory="3"
         android:showAsAction="always"/>
     <item
