--- a/GroupConnect/res/layout/fragment_home.xml
+++ b/GroupConnect/res/layout/fragment_home.xml
@@ -5,30 +5,22 @@
     android:layout_marginTop="16dp"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_weight="0.4"
-        android:orientation="vertical" >
-
-        <Button
-            android:id="@+id/frag_bnnearbyrooms"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="7dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/border_for_imageview"
-            android:text="Show nearby rooms" />
-    </RelativeLayout>
-
     <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+        android:id="@+id/frag_home_tv_ttl1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Suggested Educators"
+        android:layout_margin="5dp"
+        android:background="@drawable/org_header"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:gravity="center"
+        android:padding="10dp"
+        android:textAllCaps="true"
+        android:textColor="#FFFFFF"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:text="Nearby Rooms"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <LinearLayout
@@ -52,26 +44,27 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
             android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        <!--
-             <ImageButton
-            android:id="@+id/fgh_bnSetDist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.1"
-            android:background="@drawable/setting" />
-        -->
     </LinearLayout>
 
     <ListView
         android:id="@+id/eduSuggestLV"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="0dip"
         android:layout_weight="0.4"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin" >
     </ListView>
+
+    <Button
+        android:id="@+id/frag_bnnearbyrooms"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="7dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/view_border"
+        android:text="Show nearby rooms" />
 
 </LinearLayout>
