--- a/GroupConnect/res/layout/activity_create_rm.xml
+++ b/GroupConnect/res/layout/activity_create_rm.xml
@@ -76,6 +76,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:background="@drawable/button_okay_white"
+            android:textColor="#FFFFFF"
             android:text="Select" />
 
         <View
